--- a/package.json
+++ b/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
     "@web5/api": "^0.8.2",
+    "crypto-browserify": "^3.12.0",
     "next": "14.0.3",
+    "process": "^0.11.10",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stream-browserify": "^3.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
