feat: add view trip page. update add trip modal

--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@headlessui/react": "^1.7.17",
     "@web5/api": "^0.8.2",
     "crypto-browserify": "^3.12.0",
+    "formik": "^2.4.5",
     "next": "14.0.3",
     "process": "^0.11.10",
     "react": "^18",
     "react-dom": "^18",
-    "stream-browserify": "^3.0.0"
+    "stream-browserify": "^3.0.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
