--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "process": "^0.11.10",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.12.0",
     "stream-browserify": "^3.0.0",
     "uuid": "^9.0.1"
   },
